# practice_stm32

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  arm-toolchain.cmake  readme.md
Src/: main.c
Src/ap/: ap.c  ap.h  stm32h5xx_nucleo_conf.h
Src/bsp/: bsp.c  bsp.h  bsp_def.h  stm32h5xx_hal_msp.c
Src/bsp/ldscript/: STM32H563ZITX_FLASH.ld  STM32H563ZITX_RAM.ld
Src/common/: def.h
Src/common/hw/include/: led.h
Src/hw/: hw.c  hw.h  hw_def.h
Src/hw/driver/: led.c
Src/lib/cube_h563/: .cproject  .mxproject  .project  cube_h563.ioc
Src/lib/cube_h563/Core/Inc/: main.h
Src/lib/cube_h563/Core/Src/: gpio.c  main.c
src/: main.c  main.h
src/ap/: ap.c  ap.h
src/bsp/: bsp.c  bsp.h
src/bsp/ldscript/: stm32.ld
src/bsp/startup/: startup.s
src/common/: def.h
src/hw/: hw.c  hw.h
